--- a/src/DevElf.Logging/DevElf.Logging.csproj
+++ b/src/DevElf.Logging/DevElf.Logging.csproj
@@ -6,5 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-</Project>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+  </ItemGroup>
 
+</Project>
