Refactor logging scopes and enhance validation
Refactored logging scope implementation:
- Removed `ILogMessageScopeStore`, `ILogMessageScopeFactory`, and `IExternalScopeIntegration`.
- Introduced `AsyncLocalLogMessageScopeStack` for async-local scope management.
- Added `ILogMessageScopeAccessor` for accessing the current scope.
- Simplified `LogMessageScope` and removed Microsoft logging scope integration.

Updated dependency injection:
- Simplified `ServiceCollectionExtensions` to register `ILogMessageScopeAccessor`.

Enhanced argument validation:
- Added `EnumExtensions` and `GenericExtensions` for validation helpers.
- Updated `StringExtensions` with `ThrowIfNullOrWhiteSpace`.

Improved tests:
- Rewrote `LogMessageScopeTests` with `FakeLogger`.
- Added tests for `LogMessageScopeAccessor` and validation extensions.
- Introduced `LogMessageScopeManualTests` for manual verification.

Introduced benchmarks:
- Added `DevElf.Benchmarks` project with `BenchmarkDotNet`.

Updated `.editorconfig` rules:
- Adjusted naming conventions and disabled specific rules.

Miscellaneous:
- Updated `LoggerExtensions` to remove factory dependency.
- Enabled parallel test execution and improved documentation.

--- a/.editorconfig
+++ b/.editorconfig
@@ -275,6 +275,7 @@ dotnet_naming_rule.private_fields_should_have_underscore_prefix.style = undersco
 
 # CA1515: Consider making public types internal.
 dotnet_diagnostic.CA1515.severity = suggestion
+dotnet_code_quality.CA1515.output_kind = ConsoleApplication
 
 ############################################################
 # Project / solution files
