--- a/src/DevElf.Logging/DevElf.Logging.csproj
+++ b/src/DevElf.Logging/DevElf.Logging.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DevElf\DevElf.csproj" />
+  </ItemGroup>
+
 </Project>
