--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -11,10 +11,12 @@ root = false
 
 # CA1034: Nested types should not be visible.
 dotnet_diagnostic.CA1034.severity = none
-# CA1303: Do not pass literals as localized parameters.
-dotnet_diagnostic.CA1303.severity = none
 # CA1062: Validate arguments of public methods.
 dotnet_diagnostic.CA1062.severity = none
+# CA1303: Do not pass literals as localized parameters.
+dotnet_diagnostic.CA1303.severity = none
+# CA1515: Consider making public types internal.
+dotnet_diagnostic.CA1515.severity = none
 # CA1707: Identifiers should not contain underscores.
 dotnet_diagnostic.CA1707.severity = none
 # CA1812: Avoid uninstantiated internal classes.
@@ -33,6 +35,8 @@ dotnet_diagnostic.CA1861.severity = none
 dotnet_diagnostic.CA1869.severity = none
 # CA2000: Dispose objects before losing scope.
 dotnet_diagnostic.CA2000.severity = none
+# CA2007: Do not directly await a Task.
+dotnet_diagnostic.CA2007.severity = none
 # CA2201: Do not raise reserved exception types.
 dotnet_diagnostic.CA2201.severity = none
 # CA2254: (logging) Template should be a static expression.
