Refactor tests and add LambdaExtensions utilities
Refactored `LogMessageScopeTests` to improve readability and test coverage using `AutoFixture` and `UnwrapAndReThrow`. Added new test cases for constructor validation.

Introduced `LambdaExtensions` with `UnwrapAndReThrow` methods for `Action` and `Func<T>` to re-throw innermost exceptions while preserving stack traces. Added `LambdaExtensionsTests` to validate these utilities.

Disabled `CA1031` rule in `.editorconfig` and added comments explaining the rationale. General improvements to test setup and dependency injection.

--- a/.editorconfig
+++ b/.editorconfig
@@ -273,6 +273,9 @@ dotnet_naming_rule.private_fields_should_have_underscore_prefix.style = undersco
 # Disabled rules
 ############################################################
 
+# CA1031: Do not catch general exception types.
+# Why none?: It's not very smart.
+dotnet_diagnostic.CA1031.severity = none
 # CA1515: Consider making public types internal.
 dotnet_diagnostic.CA1515.severity = suggestion
 dotnet_code_quality.CA1515.output_kind = ConsoleApplication
