ci: add release workflow and prepare for NuGet packaging
Added `release.yml` GitHub Actions workflow to automate building, testing, versioning, and publishing NuGet packages. Updated `.editorconfig` to enforce consistent formatting and added YAML-specific settings. Enhanced `DevElf.Logging.csproj` and `DevElf.csproj` with metadata for NuGet packaging. Introduced `dotnet-tools.json` with `versionize` tool for version management. Removed `dotnet.yml` workflow in favor of the new release workflow. Updated solution file to include the release workflow.

--- a/.editorconfig
+++ b/.editorconfig
@@ -299,6 +299,13 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 ############################################################
+# YAML files
+############################################################
+[*.{yml,yaml}]
+indent_size = 2
+tab_width = 2
+
+############################################################
 # Markdown and text files
 ############################################################
 [*.md]
