--- a/src/DevElf.Logging/DevElf.Logging.csproj
+++ b/src/DevElf.Logging/DevElf.Logging.csproj
@@ -6,6 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version>0.0.0</Version>
+    <PackageId>DevElf.Logging</PackageId>
+    <Authors>Jose Luis Barreda Guerena</Authors>
+    <Company>Jose Luis Barreda Guerena</Company>
+    <Description>Logging extensions and tools for .NET applications.</Description>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
