--- a/src/DevElf/DevElf.csproj
+++ b/src/DevElf/DevElf.csproj
@@ -6,5 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version>0.0.0</Version>
+    <PackageId>DevElf</PackageId>
+    <Authors>Jose Luis Barreda Guerena</Authors>
+    <Company>Jose Luis Barreda Guerena</Company>
+    <Description>Extensions and tools for .NET applications.</Description>
+  </PropertyGroup>
+
 </Project>
 
