--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,9 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read
+  contents: write
   packages: write
-  id-token: write   # required for nuget.org OIDC
+  id-token: write
 
 jobs:
   release:
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -32,26 +34,28 @@ jobs:
         run: dotnet tool restore
 
       - name: Build
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release --no-restore
 
       - name: Test
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --configuration Release --no-build --verbosity normal
 
       - name: Bump version and changelog
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           dotnet tool run versionize --skip-commit-message-check
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add CHANGELOG.md **/*.csproj
           git commit -m "chore: bump version [skip ci]" || echo "No changes to commit"
-          git push
+          git push --follow-tags
 
       - name: Pack NuGet package
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: dotnet pack --configuration Release --output ./nupkg
 
-      - name: Publish to NuGet
-        run: dotnet nuget push ./nupkg/*.nupkg \
-             --api-key ${{ NUGET_AUTH_TOKEN }} \
-             --source https://api.nuget.org/v3/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_AUTH_TOKEN  }}
+      - name: Publish to NuGet (trusted publishing)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          dotnet nuget push ./nupkg/*.nupkg \
+               --source https://api.nuget.org/v3/index.json \
+               --skip-duplicate
