--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,8 @@ jobs:
           dotnet tool run versionize --skip-commit-message-check
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add CHANGELOG.md **/*.csproj
+          git add CHANGELOG.md
+          git add -A "*.csproj"
           git commit -m "chore: bump version [skip ci]" || echo "No changes to commit"
           git push --follow-tags
 
