--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           dotnet-version: '10.0.x'
           include-prerelease: true
+          dotnet-quality: 'preview'
 
       - name: Restore dependencies
         run: dotnet restore
