--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '10.0.x'
-          include-prerelease: true
-          dotnet-quality: 'preview'
+          dotnet-version: '10.0.100-rc.1.25451.107'
 
       - name: Restore dependencies
         run: dotnet restore
