ci: improve version bump and changelog automation
Updated the `dotnet tool run versionize` command to enforce commit message checks by removing the `--skip-commit-message-check` flag.

Added Git configuration to set the user name and email for commits made by GitHub Actions. Ensured `CHANGELOG.md` and all `.csproj` files are staged and committed with the message "chore: bump version [skip ci]" unless no changes are detected.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Bump version and changelog
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          dotnet tool run versionize --skip-commit-message-check
+          dotnet tool run versionize
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add CHANGELOG.md
