ci: refine NuGet publishing and add README to packages
Updated the CI/CD pipeline to simplify the "Publish to NuGet" job, removing the "trusted publishing" label and ensuring duplicate packages are skipped.

Modified `DevElf.Logging.csproj` and `DevElf.csproj` to include `README.md` in their respective NuGet packages.

Added comprehensive `README.md` files for `DevElf.Logging` and `DevElf`, detailing features, usage examples, API references, and important notes to improve developer experience.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,10 +48,9 @@ jobs:
         if: github.event_name == 'push'
         run: dotnet pack --configuration Release --output ./nupkg
 
-      - name: Publish to NuGet (trusted publishing)
+      - name: Publish to NuGet
         if: github.event_name == 'push'
         run: |
           dotnet nuget push ./nupkg/*.nupkg \
                --source https://api.nuget.org/v3/index.json \
                --skip-duplicate
-
