--- a/src/DevElf.Logging/DevElf.Logging.csproj
+++ b/src/DevElf.Logging/DevElf.Logging.csproj
@@ -12,7 +12,12 @@
     <Authors>Jose Luis Barreda Guerena</Authors>
     <Company>Jose Luis Barreda Guerena</Company>
     <Description>Logging extensions and tools for .NET applications.</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
