--- a/src/DevElf/DevElf.csproj
+++ b/src/DevElf/DevElf.csproj
@@ -12,7 +12,12 @@
     <Authors>Jose Luis Barreda Guerena</Authors>
     <Company>Jose Luis Barreda Guerena</Company>
     <Description>Extensions and tools for .NET applications.</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
 </Project>
 
