--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+﻿name: CI/CD Pipeline
 
 on:
   pull_request:
@@ -48,9 +48,18 @@ jobs:
         if: github.event_name == 'push'
         run: dotnet pack --configuration Release --output ./nupkg
 
+      # Get a short-lived NuGet API key
+      - name: NuGet login (OIDC → temp API key)
+        if: github.event_name == 'push'
+        uses: NuGet/login@v1
+        id: login
+        with:
+          user: ${{ secrets.NUGET_USERNAME }}
+
       - name: Publish to NuGet
         if: github.event_name == 'push'
         run: |
           dotnet nuget push ./nupkg/*.nupkg \
-               --source https://api.nuget.org/v3/index.json \
-               --skip-duplicate
+            --api-key ${{ steps.login.outputs.NUGET_API_KEY }} \
+            --source https://api.nuget.org/v3/index.json \
+            --skip-duplicate
