feat: enhance extensions and centralize project configs
Centralized project properties in `Directory.Build.props`:
- Set `TargetFramework` to `net10.0` and `LangVersion` to `latest`.
- Removed redundant properties from individual project files.

Enhanced extension methods:
- `GenericExtensions`: Added `ThrowIfNull` for nullable structs.
- `EnumExtensions`: Added `IsNotDefined` method.
- `StringExtensions`: Added `IsNotNull`, `IsNotNullOrEmpty`, and `IsNotNullOrWhiteSpace`.
- Introduced `EnumerableExtensions` with methods for null/empty validation.

Improved test coverage:
- Added tests for new methods in `GenericExtensions`, `StringExtensions`, `EnumExtensions`, and `EnumerableExtensions`.
- Expanded edge case coverage for existing methods.

Other changes:
- Simplified code in `ComparableExtensionsTests`.
- Added detailed XML documentation for all methods.
- Removed unused `using` directives and redundant code.

--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -7,4 +7,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
+  </ItemGroup>
+
 </Project>
