--- a/src/DevElf.Logging/DevElf.Logging.csproj
+++ b/src/DevElf.Logging/DevElf.Logging.csproj
@@ -7,10 +7,12 @@
     <Company>Jose Luis Barreda Guerena</Company>
     <Description>Logging extensions and tools for .NET applications.</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="../../LICENSE" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
