chore: update CI/CD workflow and enhance README
- Added a scheduled security scan to the CI/CD workflow to run daily at 2 AM UTC.
- Integrated CodeQL for security analysis in the CI/CD pipeline.
- Included steps for running a security audit and checking for outdated packages.
- Expanded the README with a development setup guide and versioning information.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,6 +5,9 @@ on:
     branches: [ "main" ]
   push:
     branches: [ "main" ]
+  schedule:
+    # Run security scan daily at 2 AM UTC
+    - cron: '0 2 * * *'
 
 permissions:
   contents: write
@@ -43,6 +46,20 @@ jobs:
           name: .NET Tests
           path: TestResults/*.trx
           reporter: dotnet-trx
+
+      - name: Security scan with CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: csharp
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+
+      - name: Run security audit
+        run: dotnet list package --vulnerable --include-transitive
+
+      - name: Check for outdated packages
+        run: dotnet list package --outdated
 
       - name: Pack NuGet package
         if: github.event_name == 'push'
