--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ permissions:
   contents: write
   packages: write
   id-token: write
+  checks: write
+  pull-requests: write
 
 concurrency:
   group: release-${{ github.ref_name }}
