--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>14</LangVersion>
     <RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -30,8 +30,8 @@
               package source defined in your configuration. We don't get this warning because we're
               using source mapping, but we still disable it just to play it safe.
     -->
-    <!-- <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>$(NoWarn),1573,1591,1712,NU1507</NoWarn> -->
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn),1573,1591,1712,NU1507</NoWarn> 
   </PropertyGroup>
 
   <!-- DefaultDocumentation settings => https://github.com/Doraku/DefaultDocumentation -->
