--- a/src/DevElf/DevElf.csproj
+++ b/src/DevElf/DevElf.csproj
@@ -9,5 +9,10 @@
     <None Include="../../LICENSE" Pack="true" PackagePath="\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="System.Threading.RateLimiting" />
+  </ItemGroup>
+
 </Project>
 
